--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'com.yinglan.scrolllayout:scrolllayout:1.0.0'
+    implementation 'net.qiujuer.genius:blur:2.0.0-beta4'//图片模糊
 }
