--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/b3"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/b3"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
