--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.yinglan.scrolllayout:scrolllayout:1.0.0'
     implementation 'net.qiujuer.genius:blur:2.0.0-beta4'//图片模糊
     implementation 'com.github.duanhong169:colorpicker:1.1.6'//颜色选择器
+    implementation 'com.google.android.material:material:1.0.0'//顶部导航栏伸缩
 }
